--- a/.orator_site/config.yaml
+++ b/.orator_site/config.yaml
@@ -5,4 +5,4 @@ keywords: "random site website tudor roman tudurom useful git blog github swamp 
 author: "Tudor Roman"
 basePath: ""
 extra:
-    themecolor: "#456472"
+    themecolor: "#1c4b4e"
